# MultiwiiExtController

./: .cproject  .gitignore  .project  Base.pro  basestationcore.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sonars.cpp  sonars.h  sonarsroutine.cpp  sonarsroutine.h
base/: .cproject  .project  CMakeLists.txt  build.sh
base/Default/: makefile
base/Default/src/BoostSerialPort/: BSerialPort.d
base/Default/src/PPM/: subdir.mk
base/Default/src/StreamReader/: streamreader.d  subdir.mk
base/Default/src/argpars/: argparser.d  subdir.mk
base/Default/src/consoleOut/: sonarsroutine.d  subdir.mk
base/Default/src/core/: basestationcore.d  subdir.mk
base/Default/src/sonars/: subdir.mk
base/Release/: CMakeCache.txt  Makefile  cmake_install.cmake
base/src/: main.cpp
base/src/Joystick/JoystickAdv/: joystickadv.h  joytypes.h
base/src/PPM/: ppm.cpp
base/src/StreamReader/: streamreader.h
base/src/consoleOut/: PPMroutine.cpp  PPMroutine.h  sonarsroutine.cpp  sonarsroutine.h
base/src/core/: basestationcore.h
base/src/sonars/: sonars.cpp  sonars.h
base/src/stream/: AsyncIOStream.h
main/: .cproject  .gitignore  .project  CMakeLists.txt  README.md  build.sh
main/src/: serialTest.cpp
main/src/BoostSerialPort/: BSerialPort.h
main/src/baseiface/: BaseStreamerRouter.cpp  BaseStreamerRouter.h  basestreamer.cpp
main/src/copter/: Copter.cpp  Copter.h
main/src/copter/mwiface/: multiwii.cpp  multiwii.h
main/src/iface/interface/: ControllerIface.cpp  ControllerIface.h  (+1 more)
main/src/sonars/: SonarsCorrector.cpp  SonarsCorrector.h
main/uml/: OpenFly.vpp  OpenFly.vux  class diagram.xmi
(+76 files in other folders)
